# cmake_starter

./: CMakeLists.txt  README.md
src/: flag_test.cpp
